force-app/main/default/objects/Appraisal_Order__c/Appraisal_Order__c.object-meta.xml
<CustomObject>
    <label>Appraisal Order</label>
    <nameField>
        <displayFormat>AO-{00000}</displayFormat>
        <label>Appraisal Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisal Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>