force-app/main/default/objects/Appraisal_Order__c/fields/Appraisal_Status_2__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Status_2__c</fullName>
    <formula>IF(ISBLANK(InspectionScheduledAt__c), &quot;Appraisal Ordered&quot;,
    IF(ISBLANK(InspectionCompleteAt__c), &quot;Inspection Scheduled&quot;, 
        &quot;Inspection Completed&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraisal Status</label>
    <type>Text</type>
</CustomField>