force-app/main/default/objects/Appraisal_Order__c/fields/Appraisal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Status__c</fullName>
    <label>Appraisal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Review In Progress</fullName>
            </value>
            <value>
                <fullName>Payment Pending</fullName>
            </value>
            <value>
                <fullName>Inspection Scheduled</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>File In Review - Revised</fullName>
            </value>
            <value>
                <fullName>Order Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>