force-app/main/default/objects/Appraisal_Order__c/fields/Comment_ID__c.field-meta.xml
<CustomField>
    <fullName>Comment_ID__c</fullName>
    <label>Comment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>