force-app/main/default/objects/Appraisal_Order__c/fields/InspectionCompleteAt__c.field-meta.xml
<CustomField>
    <fullName>InspectionCompleteAt__c</fullName>
    <label>Inspection Complete At</label>
    <type>Date</type>
</CustomField>