force-app/main/default/objects/Appraisal_Order__c/fields/InspectionScheduledAt__c.field-meta.xml
<CustomField>
    <fullName>InspectionScheduledAt__c</fullName>
    <label>Inspection Scheduled At</label>
    <type>Date</type>
</CustomField>