force-app/main/default/objects/Appraisal_Order__c/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <formula>ISPICKVAL(Appraisal_Status__c , &apos;Completed&apos;)</formula>
    <label>Is Complete?</label>
    <type>Checkbox</type>
</CustomField>