force-app/main/default/objects/Appraisal_Order__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Appraisal Orders</relationshipLabel>
    <relationshipName>Appraisal_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>