force-app/main/default/objects/Appraisal_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Appraisal_Status__c</columns>
    <columns>InspectionScheduledAt__c</columns>
    <columns>InspectionCompleteAt__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>